301_Group_3_Software/PSOC_code_T1/Workspace01/Design01.cydsn/CortexM3/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 10/11/2019 17:28:55 Project: Design01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM3\ARM_GCC_493\Debug\main.o
.\main.c:47:5: warning: data definition has no type or storage class
     array[0] = L;
     ^
.\main.c:47:5: warning: type defaults to 'int' in declaration of 'array' [-Wimplicit-int]
.\main.c:47:5: error: conflicting types for 'array'
.\main.c:46:15: note: previous declaration of 'array' was here
     enum turn array[3];
               ^
.\main.c:47:5: error: invalid initializer
     array[0] = L;
     ^
.\main.c:48:5: warning: data definition has no type or storage class
     array[1] = R;
     ^
.\main.c:48:5: warning: type defaults to 'int' in declaration of 'array' [-Wimplicit-int]
.\main.c:48:5: error: conflicting types for 'array'
.\main.c:46:15: note: previous declaration of 'array' was here
     enum turn array[3];
               ^
.\main.c:48:5: error: invalid initializer
     array[1] = R;
     ^
.\main.c:49:5: warning: data definition has no type or storage class
     array[2] = I;
     ^
.\main.c:49:5: warning: type defaults to 'int' in declaration of 'array' [-Wimplicit-int]
.\main.c:49:5: error: conflicting types for 'array'
.\main.c:46:15: note: previous declaration of 'array' was here
     enum turn array[3];
               ^
.\main.c:49:5: error: invalid initializer
     array[2] = I;
     ^
.\main.c:50:5: warning: data definition has no type or storage class
     state = I;
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
.\main.c:50:5: warning: type defaults to 'int' in declaration of 'state' [-Wimplicit-int]
.\main.c:50:5: error: conflicting types for 'state'
.\main.c:45:15: note: previous declaration of 'state' was here
     enum turn state;
               ^
.\main.c: In function 'moveForward':
.\main.c:129:5: warning: implicit declaration of function 'abs' [-Wimplicit-function-declaration]
     }else if(abs(Count1) > OPT_ROTS){
     ^
.\main.c: In function 'Timer_1_Int_Handler':
.\main.c:396:11: warning: unused variable 'count' [-Wunused-variable]
     uint8 count = Timer_1_ReadStatusRegister();
           ^
.\main.c: In function 'main':
.\main.c:542:9: warning: unused variable 'turnpart' [-Wunused-variable]
     int turnpart = 0;
         ^
.\main.c:533:9: warning: unused variable 'flag' [-Wunused-variable]
     int flag = 0;
         ^
.\main.c:532:9: warning: unused variable 'movement' [-Wunused-variable]
     int movement;
         ^
.\main.c:531:9: warning: unused variable 'index' [-Wunused-variable]
     int index = 0; 
         ^
--------------- Build Failed: 10/11/2019 17:28:56 ---------------
